css/style.css
/* ... */
.side-bar p{
    font-family: 'Roboto Condensed', sans-serif;
    display:flex;
    flex-direction: column;
    text-align: center;
    font-weight: 700;
    font-size: 1.8em;
    max-width: 60%;
    margin: 15% auto 5% auto;
    line-height: 40px;

}
.social-medias{
    display:flex;
    flex-direction: row;
    text-align: center;
    margin: 0 auto;
}
.social-medias i{
    padding:0px 20px;
    text-align: center;
}

.social-medias a .youtube_icon{
    color: rgb(194, 68, 68);
}

.social-medias a #insta{
    color: transparent;
    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
    background: -webkit-radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
    background-clip: text;
    -webkit-background-clip: text;
}

.social-medias a .facebook_icon{
    color: rgb(49, 49, 193);
}


/* SIDE BAR AND SOCIAL MEDIA END */

footer{
    text-align: center;
    font-family: 'Roboto Condensed', sans-serif;
    color: #fff;
}


/* BG-IMAGE COVER COLOR #36516e */















/* ==================================================================================================== */
/* ============================================= MEDIA QUERIES ======================================== */
/* ==================================================================================================== */











@media only screen and (max-width: 480px) {
    html{
        font-size: 11px;
    } 
    body{
        padding: 0;
        margin: 0;
        width: 100%;
        height: 100vh;
        background: url("../img/background_photo.png") center fixed;
        background-repeat:no-repeat;
        -webkit-background-size:cover;
        -moz-background-size:cover;
        -o-background-size:cover;
        background-size:cover;
        background-position:center center;
    }
    .nav{
        position: fixed;
        top: 0;
        left: 0;
        width: 100%;
        transition: all 0.2;
        z-index: 4;
        /* border-radius: 0% 0% 1.5% 1.5%; */
    }
    
    .nav ul li{
        padding: 1.4% 4%;
    
    }
    
    .nav ul li a{
        font-weight: 600;
        font-size: 1.4em;
        line-height: 35px;
    }
    .header-container{
        display:grid;
        grid-template-columns: 1fr;
        grid-template-rows: 1fr ;
        grid-auto-rows: min-content;
        grid-template-areas: 
            " header-contact header-contact "
            " image-header-wrapper image-header-wrapper"
        ;
    }
    .header-contact{
        max-height: 400px;
        padding-bottom: 0;
        margin-top: -5%;
        padding-bottom: 30px;
    }
    .header-contact .second-para{
        color: rgb(200, 238, 255);
    }
    .youtube_section{
    background: linear-gradient(bottom, rgba(215, 215, 215, 0.692) , rgba(255,255,255, 0.692));
    background: -webkit-linear-gradient(bottom, rgba(215, 215, 215, 0.692) , rgba(255,255,255, 0.692));
    background: -moz-linear-gradient(bottom, rgba(215, 215, 215, 0.692) , rgba(255,255,255, 0.692));
    background: -o-linear-gradient(bottom, rgba(215, 215, 215, 0.692) , rgba(255,255,255, 0.692));
    background: -webkit-gradient(linear, to bottom, from(rgba(215, 215, 215, 0.692)) , to(rgba(255,255,255, 0.692)));
    }
    .about_me::after{
        grid-area: about_me-wrapper;
        position: absolute;
        width: 100%;
        height: 100%;
        content: '';
        background: rgb(255, 255, 255);
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        z-index: -1;
        transform-origin: top left;
        transform: skewY(2deg);
        box-shadow: 0px 5px 10px -2px rgb(180, 180, 180, 0.805);
    }
    .about_me::before{
        grid-area: about_me-wrapper;
        position: absolute;
        width: 100%;
        height: 100%;
        content: '';
        background: rgb(255, 255, 255);
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        z-index: -1;
        transform-origin: top right;
        transform: skewY(2deg);
        box-shadow: 0px 5px 10px 5px rgba(180, 180, 180, 0.805);
    }

    .social-medias a .youtube_icon{
        color: rgb(194, 68, 68);
    }

}
/* ... */

